# pyinstaller-bug-repro

./: .gitignore  README.md  build.sh  pack.py  run.sh  tfnative
cpp/: CMakeLists.txt  main.cpp
